# FP-agent

./: .gitignore  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
agents/integration/: README.md
agents/rmd/: Makefile  README.md  agent.py  mock_data.py  pyproject.toml  run_parser_tests.py  run_real_tests.py  run_tests.py
agents/rmd/core/: agent.py  parser.py  rules.py  tools.py
agents/rmd/core/prompts/: system_prompt.md
agents/rmd/prompts/: 01-eligible-not-started.json  02-eligible-in-progress.json  03-eligible-completed.json  04-roth-not-eligible.json  05-too-young.json  06-missing-data.json  07-manual-input.json  08-negative-balance.json  09-invalid-dob.json  10-account-type-case.json  11-roth-lowercase.json  12-inherited-ira.json  13-employer-retirement-plan.json  14-age-73-first-rmd-year.json  15-zero-balance.json  16-ytd-equals-rmd.json  17-sep-ira.json  18-rollover-ira.json  19-urgent-take-rmd-now.json  20-inherited-ira-10yr-rule.json  21-inherited-ira-spouse-stretch.json  22-inherited-ira-missing-fields.json  nl-01-natural-sentence.json  nl-02-abbreviations.json  nl-03-million-suffix.json  nl-04-missing-fields.json  nl-05-dollar-format.json
agents/rmd/prompts/real/: real-01-rollover-partial.json  real-02-ira-partial.json  real-03-ira-not-taken.json  real-04-rollover-satisfied.json  real-05-inherited-ira-requires-review.json  real-06-inherited-ira-young.json  (+15 more)
agents/rmd/rmd/: __init__.py  agent.py  rules.py  tools.py
docs/: PRINCIPLES.md  SYSTEM_DESIGN.md
scripts/: check_token.py  save_token.py
(+1 files in other folders)
