[project]
name = "financial-planning"
version = "0.1.0"
description = "Financial planning advisor agents for Farther wealth management"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "strands-agents[anthropic]>=1.35.0",
    "requests>=2.31.0",
    "python-dotenv>=1.2.2",
    "arize-phoenix-otel>=0.15.0",
    "openinference-instrumentation-anthropic>=1.0.1",
    "openinference-instrumentation-bedrock>=0.1.35",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
